# procsnipe

./: .gitignore  Cargo.toml  README.md  build.bat  build_installer.bat
installer/: LICENSE.txt  disclaimer.txt  setup.iss
src/: main.rs  tray.rs
